<resources>
    <string name="app_name">ProjecteCafeteriaRoger</string>
    <string name="inicia_sesi">Inicia Sesió</string>
    <string name="registre">Registre</string>
    <string name="nom">Nom</string>
    <string name="contrasenya">Contrasenya</string>
    <string name="seguent">Següent</string>
    <string name="pagar">Pagar</string>
    <string name="menjar">Menjar</string>
    <string name="beguda">Beguda</string>
    <string name="postre">Postre</string>
    <string name="producte">Producte</string>
    <string name="no_tens_cap_compte_creat"><u>No tens cap compte creat?</u></string>
    <string name="ja_tens_un_compte_creat"><u>Ja tens un compte creat?</u></string>
    <string name="hello_blank_fragment">hola\n</string>

</resources>