<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        tools:context=".registre.RegistreActivity">

        <EditText
            android:id="@+id/editTextContrasenya"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/contrasenya"
            app:layout_constraintBottom_toTopOf="@+id/buttonSeguent"
            app:layout_constraintStart_toStartOf="@+id/editTextNom"
            app:layout_constraintTop_toBottomOf="@+id/editTextNom" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="149dp"
            android:layout_height="135dp"
            android:layout_marginTop="84dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/baseline_person_24"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="251dp"
            android:layout_height="58dp"
            android:layout_marginBottom="22dp"
            android:text="@string/registre"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/editTextNom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <EditText
            android:id="@+id/editTextNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="17dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/nom"
            app:layout_constraintBottom_toTopOf="@+id/editTextContrasenya"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <Button
            android:id="@+id/buttonSeguent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginBottom="339dp"
            android:background="@drawable/buttonborder"
            android:text="@string/seguent"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/editTextContrasenya"
            app:layout_constraintTop_toBottomOf="@+id/editTextContrasenya" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/ja_tens_un_compte_creat"
            android:textColor="@color/purple"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonSeguent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>